<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="30dp"
    android:layout_marginStart="30dp"
    tools:context=".SecondFragment"
    android:id="@+id/fragment2">
    <android.widget.Button
        android:id="@+id/bnToFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_to1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/bnToThird"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_to3"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/bnToFirst" />

</androidx.constraintlayout.widget.ConstraintLayout>
