<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="30dp"
    android:layout_marginStart="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FirstFragment"
    android:id="@+id/fragment1">

    <android.widget.Button
        android:id="@+id/bnToSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_to2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>